[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
exitfailure = "0.5.1"
serde = "1.0.139"
serde_json = "1.0.82"
serde_derive = "1.0.139"
chrono = "0.4.19"